--- a/me/src/main/res/values/strings.xml
+++ b/me/src/main/res/values/strings.xml
@@ -1,1 +1,6 @@
-<resources></resources>
+<resources>
+    <string name="str_key1">首页</string>
+    <string name="str_key2">计划</string>
+    <string name="str_key3">我的</string>
+    <string name="str_key4">jump to me</string>
+</resources>
